fixed scrollbar visibility

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
     overflow: scroll;
 }
 
-::-webkit-scrollbar {
+.nav::-webkit-scrollbar {
     width: 0;
     background: transparent;
 }
